# basic80

./: README.md  basic.h  command.c  command.h  error.c  error.h  file.c  file.h  main.c  math.c  math.h  meson.build  program.c  program.h  var.c  var.h
